# orchestrator

./: Cargo.toml  README.md
.github/workflows/: deploy-docs.yaml
examples/: docs_example.rs
src/: lib.rs  node.rs  orchestrator.rs  pipeline.rs
src/generic/: any_debug.rs  mod.rs  node.rs
src/generic/node/: fn_node.rs  mod.rs  node_trait.rs  output.rs  returnable.rs
src/generic/node/fn_node/: fn_node_future_ext.rs  fn_node_impl.rs  mod.rs  output.rs
src/generic/node/squash_nodes/: mod.rs  orchestrator_as_node.rs  pipeline_as_node.rs
src/generic/orchestrator/: error.rs  generic_orchestrator.rs  generic_orchestrator_as_node.rs  generic_orchestrator_as_pipeline.rs  internal_pipeline.rs  keyed_generic_orchestrator.rs  mod.rs  orchestrator.rs
src/generic/pipeline/: error.rs  fn_pipeline.rs  generic_pipeline.rs  generic_pipeline_as_node.rs  internal_node.rs  mod.rs  output.rs  pipeline.rs  pipeline_storage.rs
src/generic/pipeline/squash_pipelines/: mod.rs  orchestrator_as_pipeline.rs
src/internal/: mod.rs  node.rs
tests/: functionality.rs  generics.rs  own_impl.rs
