[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
orchestrator = { path = ".", features = ["pipeline_early_return"] }

[package.metadata.docs.rs]
all-features = true

[features]
pipeline_early_return = []
